--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MovieAppCompose</string>
-    <string name="movie_top_bar_title">Comp Movie</string>
+    <string name="movie_top_bar_title">Movie Comp</string>
     <string name="about_top_bar_title">About</string>
     <string name="movie">Movie</string>
     <string name="watchlist">Watchlist</string>
@@ -12,4 +12,5 @@
     <string name="profile_desc">Profile Image</string>
     <string name="my_name">Abdul Azis</string>
     <string name="my_email">abdul.azizz1108@gmail.com</string>
+    <string name="movie_rating">Movie Rating</string>
 </resources>
