--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="reload">Reload</string>
     <string name="go_to_previous_page">Go to previous page</string>
     <string name="overview">Overview</string>
+    <string name="recommendation">Recommendation</string>
 </resources>
