--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="go_to_previous_page">Go to previous page</string>
     <string name="overview">Overview</string>
     <string name="recommendation">Recommendation</string>
+    <string name="no_recommendation">No Recommendations</string>
 </resources>
