--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,5 @@
     <string name="query_search_placeholder">Type to search…</string>
     <string name="search_empty">Movie not found</string>
     <string name="clear_query">Clear query</string>
-
+    <string name="cancel">Cancel</string>
 </resources>
