--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="search_empty">Movie not found</string>
     <string name="clear_query">Clear query</string>
     <string name="cancel">Cancel</string>
+    <string name="watchlist_empty">You don\'t have a watchlist movie yet</string>
+    <string name="movie_empty">Movie data is empty :(</string>
+    <string name="detail_empty">Ups. Data could not be loaded</string>
 </resources>
