--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,5 @@
     <string name="movie_empty">Movie data is empty :(</string>
     <string name="detail_empty">Ups. Data could not be loaded</string>
     <string name="add_watchlist">Add movie to watchlist</string>
-    <string name="remove_watchlist">Remove movie from watchlist</string>
+    <string name="watchlist_action">Add or Remove watchlist</string>
 </resources>
