--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="watchlist_action">Add or Remove watchlist</string>
     <string name="now_playing_tag_test">NowPlayingMovieList</string>
     <string name="main_movie_tag_test">MainMovieList</string>
+    <string name="search_bar_tag_test">SearchBar</string>
 </resources>
