--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,9 +25,9 @@
     <string name="watchlist_empty">You don\'t have a watchlist movie yet</string>
     <string name="movie_empty">Movie data is empty :(</string>
     <string name="detail_empty">Ups. Data could not be loaded</string>
-    <string name="add_watchlist">Add movie to watchlist</string>
-    <string name="remove_watchlist">Remove from watchlist</string>
+    <string name="watchlist_action">Add watchlist?</string>
     <string name="now_playing_tag_test">NowPlayingMovieList</string>
     <string name="main_movie_tag_test">MainMovieList</string>
     <string name="search_bar_tag_test">SearchBar</string>
+    <string name="watchlist_tag_test">WatchlistMovie</string>
 </resources>
